# magic-novel

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/agent_engine/: compaction.rs  context_loader.rs  emitter.rs  events.rs  exposure_policy.rs  llm_compaction_summarizer.rs  loop_engine.rs  messages.rs  mod.rs  persistence.rs  recovery.rs  reminder_builder.rs  reminder_builder_tests.rs  session_state.rs  skills.rs  text_utils.rs  todowrite.rs  tool_dispatch.rs  tool_errors.rs  tool_formatters.rs  tool_routing.rs  tool_scheduler.rs  tool_schemas.rs  turn.rs  types.rs  worker_dispatch.rs  worker_identity.rs
src-tauri/src/agent_tools/: budget.rs  contracts.rs  definition.rs  mod.rs  refs.rs
src-tauri/src/application/: mod.rs
src-tauri/src/commands/: agent.rs  agent_engine.rs  agent_session.rs  ai.rs  asset.rs  chapter.rs  export.rs  global_config.rs  import.rs  inspiration.rs  jvm.rs  knowledge_docs.rs  mission.rs  mod.rs  project.rs  project_bootstrap.rs  recycle.rs  search_index.rs  versioning.rs  volume.rs  writing_stats.rs
src-tauri/src/compat/: mod.rs  tool_gateway.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/gate_integration/: canon_version.rs  mod.rs  profile_assembler.rs  rules_summary.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/llm/: mod.rs  (+8 more)
src-tauri/tests/: integration_agent_loop.rs
(+1038 files in other folders)
